Adding Contract Test with Pact